--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -55,9 +55,9 @@
                     </div>
 
                     <div>
-                        <img src="../../assets/images/puppy-1280.png" class="not-only-image1" alt="">
-                        <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="">
-                        <img src="../../assets/images/puppy-320..png" class="not-only-image3" alt="">
+                        <img src="../../assets/images/puppy-1280.png" class="not-only-image1" alt="puppy">
+                        <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="puppy">
+                        <img src="../../assets/images/puppy-320..png" class="not-only-image3" alt="puppy">
                     </div>
                 </div>
             </div>
@@ -67,9 +67,9 @@
             <div class="container about-container">
                 <div class="about-block">
                     <div>
-                        <img src="../../assets/images/about-pets.jpg" class="about-image1" alt="">
-                        <img src="../../assets/images/about-pets-768.jpg" class="about-image2" alt="">
-                        <img src="../../assets/images/about-pets-350.jpg" class="about-image3" alt="">
+                        <img src="../../assets/images/about-pets.jpg" class="about-image1" alt="cat and dog">
+                        <img src="../../assets/images/about-pets-768.jpg" class="about-image2" alt="cat and dog">
+                        <img src="../../assets/images/about-pets-350.jpg" class="about-image3" alt="cat and dog">
                     </div>
                     <div class="about-content">
                         <h2 class="about-title">About the shelter<br>“Cozy House”</h2>
@@ -102,11 +102,11 @@
 
                     <div class="our-friends-catalog">
                         <button class="previous">
-                            <img src="../../assets/icons/arrow1.svg" class="arrow" alt="">
+                            <img src="../../assets/icons/arrow1.svg" class="arrow" alt="arrow-previous">
                         </button>
                         <div class="card-box">
                             <div class="card card1">
-                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="katrine">
                                 <h4 class="card-name">Katrine</h4>
                                 <form action="#openModal1">
                                     <button class="card-button card-link">Learn
@@ -120,7 +120,8 @@
                                             <button class="close" title="Закрыть"><img
                                                     src="../../assets/icons/modal-close.svg" alt=""></button>
                                         </form>
-                                        <img src="../../assets/images/pets-katrine.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-katrine.jpg" class="modal-image"
+                                            alt="katrine">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Katrine</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
@@ -151,7 +152,7 @@
                                 </div>
                             </div>
                             <div class="card card2">
-                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="jennifer">
                                 <h4 class="card-name">Jennifer</h4>
                                 <form action="#openModal2">
                                     <button class="card-button card-link">Learn
@@ -162,9 +163,10 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-jennifer.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-jennifer.jpg" class="modal-image"
+                                            alt="jennifer">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Jennifer</h2>
                                             <p class="modal-subtitle">Dog - Labrador</p>
@@ -199,7 +201,7 @@
 
                             </div>
                             <div class="card card3">
-                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="woody">
                                 <h4 class="card-name">Woody</h4>
                                 <form action="#openModal3">
                                     <button class="card-button card-link">Learn
@@ -210,9 +212,9 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="woody">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Woody</h2>
                                             <p class="modal-subtitle">Dog - Golden Retriever</p>
@@ -245,15 +247,15 @@
                             </div>
                         </div>
                         <button class="next">
-                            <img src="../../assets/icons/arrow2.svg" class="arrow" alt="">
+                            <img src="../../assets/icons/arrow2.svg" class="arrow" alt="arrow-next">
                         </button>
                     </div>
                     <div class="previous-next-box">
                         <button class="previous-320">
-                            <img src="../../assets/icons/arrow1.svg" alt="">
+                            <img src="../../assets/icons/arrow1.svg" alt="arrow-previous">
                         </button>
                         <button class="next-320">
-                            <img src="../../assets/icons/arrow2.svg" alt="">
+                            <img src="../../assets/icons/arrow2.svg" alt="arrow-next">
                         </button>
                     </div>
                     <form action="../pets/index2.html" target="_blank">
@@ -338,12 +340,13 @@
         <section class="in-addition" id="contacts">
             <div class="container in-addition-container">
                 <div class="in-addition-block">
-                    <img src="../../assets/images/donation-dog.png" class="in-addition-image1" alt="">
-                    <img src="../../assets/images/donation-dog-320.png" class="in-addition-image3" alt="">
+                    <img src="../../assets/images/donation-dog.png" class="in-addition-image1" alt="donation-dog">
+                    <img src="../../assets/images/donation-dog-320.png" class="in-addition-image3" alt="donation-dog">
                     <div class="in-addition-content">
                         <h2 class="in-addition-title">You can also<br>make a donation</h2>
                         <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                        <form action="#no_scroll">
+                        <form action="#">
+                            <!-- <form action="#no_scroll"> -->
                             <button class="credit-button credit-icon credit-link">8380 2880 8028 8791
                                 7435</button>
                         </form>
@@ -357,30 +360,24 @@
         </section>
     </main>
 
-
-
-    <!-- <a href="#">
-        <img src="#">
-        <span>текст</span>
-    </a> -->
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-block">
                 <div class="contacts">
                     <h2 class="footer-title">For questions and suggestions</h2>
                     <div class="link-box-contacts">
-                        <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="">
+                        <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="email">
                         <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                     </div>
                     <div class="link-box-contacts">
-                        <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="">
+                        <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="phone">
                         <a href="" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
                     <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="map">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.358552,-71.054726,16z/data=!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru"
                             class="footer-link link-map">1
@@ -388,15 +385,15 @@
                         </a>
                     </div>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                        <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="map">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/%D0%9F%D0%B0%D1%80%D0%BA+%D0%AE%D0%B3/@51.4899577,-0.2479026,11z/data=!4m9!1m2!2m1!1s18+South+Park,+London!3m5!1s0x48760f79376fa0e3:0x202ac3af5c1ea4ec!8m2!3d51.4691953!4d-0.1941945!15sChUxOCBTb3V0aCBQYXJrLCBMb25kb26SAQRwYXJr?hl=ru"
                             class="footer-link link-map2">18 South Park, London</a>
                     </div>
                 </div>
                 <div class="footer-image">
-                    <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="">
-                    <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="">
+                    <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="puppy">
+                    <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="puppy">
                 </div>
             </div>
         </div>
