--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -56,7 +56,7 @@
                         <div class="card-box">
 
                             <div class="card card1">
-                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="katrine">
                                 <h4 class="card-name">Katrine</h4>
                                 <form action="#openModal1">
                                     <button class="card-button card-link">Learn
@@ -67,9 +67,10 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-katrine.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-katrine.jpg" class="modal-image"
+                                            alt="katrine">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Katrine</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
@@ -99,7 +100,7 @@
                             </div>
 
                             <div class="card card2">
-                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="jennifer">
                                 <h4 class="card-name">Jennifer</h4>
                                 <form action="#openModal2">
                                     <button class="card-button card-link">Learn
@@ -110,9 +111,10 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-jennifer.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-jennifer.jpg" class="modal-image"
+                                            alt="jennifer">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Jennifer</h2>
                                             <p class="modal-subtitle">Dog - Labrador</p>
@@ -145,7 +147,7 @@
                             </div>
 
                             <div class="card card3">
-                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="woody">
                                 <h4 class="card-name">Woody</h4>
                                 <form action="#openModal3">
                                     <button class="card-button card-link">Learn
@@ -156,9 +158,9 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="woody">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Woody</h2>
                                             <p class="modal-subtitle">Dog - Golden Retriever</p>
@@ -189,7 +191,7 @@
                             </div>
 
                             <div class="card card4">
-                                <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="sophia">
                                 <h4 class="card-name">Sophia</h4>
                                 <form action="#openModal4">
                                     <button class="card-button card-link">Learn
@@ -200,9 +202,9 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-sophia.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-sophia.jpg" class="modal-image" alt="sophia">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Sophia</h2>
                                             <p class="modal-subtitle">Dog - Shih tzu</p>
@@ -237,7 +239,7 @@
                         <div class="card-box">
 
                             <div class="card card5">
-                                <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="timmy">
                                 <h4 class="card-name">Timmy</h4>
                                 <form action="#openModal5">
                                     <button class="card-button card-link">Learn
@@ -248,9 +250,9 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-timmy.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-timmy.jpg" class="modal-image" alt="timmy">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Timmy</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
@@ -280,7 +282,7 @@
                             </div>
 
                             <div class="card card6">
-                                <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="charly">
                                 <h4 class="card-name">Charly</h4>
                                 <form action="#openModal6">
                                     <button class="card-button card-link">Learn
@@ -291,9 +293,9 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-charly.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-charly.jpg" class="modal-image" alt="charly">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Charly</h2>
                                             <p class="modal-subtitle">Dog - Jack Russell Terrier</p>
@@ -323,7 +325,7 @@
                             </div>
 
                             <div class="card card7">
-                                <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="scarlet">
                                 <h4 class="card-name">Scarlett</h4>
                                 <form action="#openModal7">
                                     <button class="card-button card-link">Learn
@@ -334,9 +336,10 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-scarlet.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-scarlet.jpg" class="modal-image"
+                                            alt="scarlet">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Scarlett</h2>
                                             <p class="modal-subtitle">Dog - Jack Russell Terrier</p>
@@ -367,7 +370,7 @@
                             </div>
 
                             <div class="card card8">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
+                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="freddie">
                                 <h4 class="card-name">Freddie</h4>
                                 <form action="#openModal8">
                                     <button class="card-button card-link">Learn
@@ -378,9 +381,10 @@
                                     <div class="modal-content">
                                         <form action="#close">
                                             <button class="close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                                    src="../../assets/icons/modal-close.svg" alt="close"></button>
                                         </form>
-                                        <img src="../../assets/images/pets-freddie.jpg" class="modal-image" alt="">
+                                        <img src="../../assets/images/pets-freddie.jpg" class="modal-image"
+                                            alt="freddie">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Freddie</h2>
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
@@ -413,20 +417,20 @@
                     </div>
 
                     <div class="slider-block">
-                        <button class="slider-button switch" disabled>
-                            <img src="../../assets/icons/before2.svg" alt="">
+                        <button class="slider-button" disabled>
+                            <img src="../../assets/icons/before2.svg" alt="arrow-before2">
                         </button>
-                        <button class="slider-button switch" disabled>
-                            <img src="../../assets/icons/before1.svg" alt="">
+                        <button class="slider-button" disabled>
+                            <img src="../../assets/icons/before1.svg" alt="arrow-before1">
                         </button>
                         <button class="slider-button one">
-                            <img src="../../assets/icons/one.svg" alt="">
+                            <img src="../../assets/icons/one.svg" alt="one">
                         </button>
                         <button class="slider-button switch">
-                            <img src="../../assets/icons/after1.svg" alt="">
+                            <img src="../../assets/icons/after1.svg" alt="arrow-after1">
                         </button>
                         <button class="slider-button switch">
-                            <img src="../../assets/icons/after2.svg" alt="">
+                            <img src="../../assets/icons/after2.svg" alt="arrow-after2">
                         </button>
                     </div>
                 </div>
@@ -441,18 +445,18 @@
                 <div class="contacts">
                     <h2 class="footer-title">For questions and suggestions</h2>
                     <div class="link-box-contacts">
-                        <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="">
+                        <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts-email" alt="email">
                         <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                     </div>
                     <div class="link-box-contacts">
-                        <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="">
+                        <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="phone">
                         <a href="" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
                     <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="map">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.358552,-71.054726,16z/data=!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru"
                             class="footer-link link-map">1
@@ -460,15 +464,15 @@
                         </a>
                     </div>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="map">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/%D0%9F%D0%B0%D1%80%D0%BA+%D0%AE%D0%B3/@51.4899577,-0.2479026,11z/data=!4m9!1m2!2m1!1s18+South+Park,+London!3m5!1s0x48760f79376fa0e3:0x202ac3af5c1ea4ec!8m2!3d51.4691953!4d-0.1941945!15sChUxOCBTb3V0aCBQYXJrLCBMb25kb26SAQRwYXJr?hl=ru"
                             class="footer-link link-map2">18 South Park, London</a>
                     </div>
                 </div>
                 <div class="footer-image">
-                    <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="">
-                    <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="">
+                    <img src="../../assets/images/footer-puppy.png" class="footer-puppy1" alt="puppy">
+                    <img src="../../assets/images/footer-puppy-320.png" class="footer-puppy3" alt="puppy">
                 </div>
             </div>
         </div>
